# VideoCorruptor

./: .gitignore  AVICorruptor.cpp  AVICorruptor.h  CMakeLists.txt  LICENSE  MP4Corruptor.cpp  MP4Corruptor.h  README.md  VideoCorruptor.h  main.cpp
